--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 D:\Betinho\Trabalhos\Desenhos\Cavalos\vídeos
 D:\Betinho\Trabalhos\Desenhos\Canoeiro\vídeos
+D:\Betinho\Trabalhos\Desenhos\Águia pescadora\vídeos
