--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 D:\Betinho\Trabalhos\Desenhos\Cavalos\vídeos
 D:\Betinho\Trabalhos\Desenhos\Canoeiro\vídeos
 D:\Betinho\Trabalhos\Desenhos\Águia pescadora\vídeos
+D:\Betinho\Trabalhos\Desenho\Gatos\vídeos
